--- a/popup.html
+++ b/popup.html
@@ -309,7 +309,7 @@ var Composer = {
     if (reply_all) {
       $(".text a", node).each(function(){
         var t = $(this).text();
-        if (t !== ownName && /^[A-Z0-9_-]{1,15}$/ig.test(t)) {
+        if (t !== ownName && /^[A-Z0-9_-]{1,15}$/i.test(t)) {
           replies.push('@'+t+' ');
         }
       });
