--- a/popup.html
+++ b/popup.html
@@ -13,12 +13,24 @@ var urlExpander = chrome.extension.getBackgroundPage().urlExpander;
 var tweetManager = chrome.extension.getBackgroundPage().TweetManager.instance;
 var twitterBackend = tweetManager.twitterBackend;
 var OptionsBackend = chrome.extension.getBackgroundPage().OptionsBackend;
-var TwitterLib = {
-  URLS: {
-    BASE: 'http://twitter.com/',
-    SEARCH: 'http://twitter.com/search?q='
-  }
-};
+
+var microbloggingService = OptionsBackend.get('microblogging_service');
+var TwitterLib;
+if(microbloggingService == 'twitter') {
+  TwitterLib = {
+    URLS: {
+      BASE: 'http://twitter.com/',
+      SEARCH: 'http://twitter.com/search?q='
+    }
+  };
+} else if(microbloggingService == 'identica') {
+  TwitterLib = {
+    URLS: {
+      BASE: 'http://identi.ca/',
+      SEARCH: 'http://identi.ca/search/notice?q='
+    }
+  };
+}
 
 if(!twitterBackend.authenticated() && !twitterBackend.tokenRequested()) {
   twitterBackend.startAuthentication();
