Adding option to include page title when sharing current page.

--- a/background.html
+++ b/background.html
@@ -27,6 +27,7 @@ OptionsBackend = {
     shortener_acct: false,
     shortener_login: '',
     shortener_key: '',
+    share_include_title: false,
     name_attribute: 'name',
     request_timeout: 6000,
     compose_position: 'top',
