--- a/options.html
+++ b/options.html
@@ -565,6 +565,8 @@ function updatePredictedHitsCount() {
       <label for="shortener_key">API Key:</label>
       <input type="text" name="shortener_key">
     </p>
+    <label for="share_include_title">Include page title (sharing):</label>
+    <input type="checkbox" name="share_include_title"><br>
   </fieldset>
 
   <fieldset>
